Refactor/separate test fixtures (#24)
* refactor: 테스트 Fixture를 도메인별로 분리 (Nested Builder Pattern)

## 변경사항

### 1. TestFixtures 구조 개선
- 기존: 단일 TestFixtures 클래스에 모든 도메인 로직
- 개선: 도메인별 Fixtures 클래스 분리
  - UserFixtures: 사용자 생성 및 SecurityContext 관리
  - FamilyFixtures: 가족 생성 및 멤버 관리
  - CategoryFixtures: 카테고리 생성 및 관리
  - ExpenseFixtures: 지출 생성 및 관리
  - IncomeFixtures: 수입 생성 및 관리

### 2. 사용법 변경
Before:
```java
User user = fixtures.user().build();
Family family = fixtures.family().build();
```

After:
```java
User user = fixtures.users.user().build();
Family family = fixtures.families.family().build();
```

### 3. TestUserHolder 제거
- TestUserHolder.java 삭제
- 모든 테스트에서 TestFixtures 사용으로 통일

### 4. 장점
- ✅ 단일 책임 원칙 (Single Responsibility Principle)
- ✅ 명확한 의존성 구조 (User → Family → Category → Expense/Income)
- ✅ 도메인 확장 용이 (새 Fixtures 클래스만 추가)
- ✅ 네임스페이스 분리로 가독성 향상

### 5. 영향받은 테스트 파일
- CategoryServiceCacheTest
- ExpenseServiceIntegrationTest
- AbstractControllerTest
- DashboardControllerTest
- IncomeControllerTest
- FosSpringBootTest (문서 업데이트)

모든 테스트 통과 및 빌드 성공 확인

* refactor: TestFixturesSupport 추상 클래스 도입으로 테스트 코드 간소화

- TestFixturesSupport 추상 클래스 생성
  - @FosSpringBootTest 자동 적용
  - @BeforeEach: fixtures 자동 초기화
  - @AfterEach: fixtures 캐시 자동 정리

- AbstractControllerTest를 TestFixturesSupport 상속으로 변경
  - MockMvc와 ObjectMapper만 추가 제공
  - SecurityContext 정리 로직 유지

- 서비스 통합 테스트들 리팩토링
  - CategoryServiceCacheTest
  - ExpenseServiceIntegrationTest
  - FamilyServiceIntegrationTest
  - BudgetAlertServiceIntegrationTest

- 장점
  - 반복적인 setUp/tearDown 로직 제거
  - 일관된 테스트 패턴 보장
  - 코드 중복 최소화
  - 가독성 향상

* fix: TestFixturesSupport에 SecurityContext 정리 로직 추가

문제:
- TestFixturesSupport의 tearDownFixtures()에서 SecurityContext를 정리하지 않아
  테스트 간 인증 컨텍스트가 누수되는 문제 발생
- 이전에 서비스 통합 테스트들이 명시적으로 SecurityContext를 정리했으나
  TestFixturesSupport로 통합하면서 해당 로직이 누락됨
- 테스트 실행 순서에 따라 flaky test 발생 가능성

해결:
- TestFixturesSupport.tearDownFixtures()에 SecurityContextHolder.clearContext() 추가
- AbstractControllerTest의 중복된 cle